--- a/contextohistorico.html
+++ b/contextohistorico.html
@@ -99,7 +99,27 @@
       <h2></h2>
       <p class="content">
         Insira o conteúdo aqui
-      </p>
+
+        Contexto Histrórico: A Segunda Guerra Mundial teve como contexto histórico o período após a Primeira Guerra Mundial, marcado por crises econômicas, políticas e sociais, especialmente na Europa. A ascensão do fascismo na Itália e do nazismo na Alemanha, a expansão territorial e o expansionismo alemão foram fatores cruciais para o início do conflito. A invasão da Polônia pela Alemanha em setembro de 1939, por exemplo, foi o estopim para a guerra. 
+
+        Causas e Antecedentes:
+
+        Humilhação da Alemanha:
+O Tratado de Versalhes, que impôs pesadas condições à Alemanha após a Primeira Guerra, gerou um forte sentimento de injustiça e descontentamento. 
+
+        Ascensão do Fascismo e Nazismo:
+A crise do pós-guerra favoreceu o surgimento e a ascensão de regimes totalitários, como o fascismo italiano e o nazismo alemão, com ideologias expansionistas e militaristas. 
+
+        Expansionismo Alemão: 
+A Alemanha, sob o comando de Hitler, buscou reverter as condições impostas em Versalhes, promovendo uma política de expansão territorial e militar. 
+
+        Conflitos Territoriais:
+A Alemanha invadiu a Polônia em setembro de 1939, levando à declaração de guerra da França e da Grã-Bretanha, marcando o início do conflito. 
+
+        Crise Econômica:
+A crise de 1929 agravou os problemas sociais e econômicos, contribuindo para a radicalização política e o aumento do apoio aos regimes totalitários. 
+      
+</p>
     </div>
 
 
