--- a/indexNew.html
+++ b/indexNew.html
@@ -13,46 +13,48 @@
 
     <div class="section">
       <p class="intro">
-        Introdução
+        Introdução: A Segunda Guerra Mundial foi um conflito de proporções globais que aconteceu entre 1939 e 1945. Caracterizada como um conflito em estado de guerra total (no qual há mobilização de todos os recursos para a guerra), a Segunda Guerra Mundial fez Aliados e Eixo enfrentarem-se na Europa, África, Ásia e Oceania. Após seis anos de conflito, mais de 60 milhões de pessoas morreram.
       </p>
 
       <h2>O Contexto Histórico</h2>
       <p class="content">
-       Contexto Histrórico
-      </p>
+       Contexto Histrórico: A Segunda Guerra Mundial teve como contexto histórico o período após a Primeira Guerra Mundial, marcado por crises econômicas, políticas e sociais, especialmente na Europa. A ascensão do fascismo na Itália e do nazismo na Alemanha, a expansão territorial e o expansionismo alemão foram fatores cruciais para o início do conflito. A invasão da Polônia pela Alemanha em setembro de 1939, por exemplo, foi o estopim para a guerra. 
 
-      <h2>Envolvidos e suas motivações</h2>
-      <p class="content">
-        Consequências e impaco
-      </p>
+        Causas e Antecedentes:
 
-      <h2>Principais batalhas</h2>
-      <p class="content">
-        Consequências e impaco
-      </p>
+        Humilhação da Alemanha:
+O Tratado de Versalhes, que impôs pesadas condições à Alemanha após a Primeira Guerra, gerou um forte sentimento de injustiça e descontentamento. 
 
-      <h2>O papel dos EUA</h2>
-      <p class="content">
-        Consequências e impaco
-      </p>
+        Ascensão do Fascismo e Nazismo:
+A crise do pós-guerra favoreceu o surgimento e a ascensão de regimes totalitários, como o fascismo italiano e o nazismo alemão, com ideologias expansionistas e militaristas. 
 
-      <h2>O papel da URSS</h2>
-      <p class="content">
-        Consequências e impaco
-      </p>
+        Expansionismo Alemão: 
+A Alemanha, sob o comando de Hitler, buscou reverter as condições impostas em Versalhes, promovendo uma política de expansão territorial e militar. 
 
-      <h2>Hiroshimna e Nagasaki</h2>
-      <p class="content">
-        Consequências e impaco
+        Conflitos Territoriais:
+A Alemanha invadiu a Polônia em setembro de 1939, levando à declaração de guerra da França e da Grã-Bretanha, marcando o início do conflito. 
+
+        Crise Econômica:
+A crise de 1929 agravou os problemas sociais e econômicos, contribuindo para a radicalização política e o aumento do apoio aos regimes totalitários. 
       </p>
 
       <h2>Consequências e Impacto</h2>
       <p class="content">
-        Consequências e impaco
-      </p>
+        Consequências e impactos :A Segunda Guerra Mundial marcou profundamente o mundo contemporâneo.
+A Alemanha não foi declarada culpada da guerra, como no conflito anterior, porém passou por um profundo processo de depuração ideológica. Além disso, teve seu território dividido entre a Alemanha Oriental, vinculada ideologicamente à União Soviética, e a Alemanha Ocidental, próxima dos países ocidentais.
+Os países europeus se encontravam destruídos e com sua população reduzida. Somente com a ajuda americana, através do Plano Marshall, foi possível a reconstrução da Europa Ocidental.
+Também foi concretizada a criação de um fórum internacional, a Organização das Nações Unidas (ONU), que seria um instrumento diplomático entre as nações para evitar a guerra.
+
+Um dos principais vencedores do conflito foi os Estados Unidos, que tiveram somente o território do Havaí atacado e tiveram perdas econômicas muito menores que os europeus. A impressionante vitória soviética também alçou o país à condição de potência mundial.
+
+A Europa também foi dividida em dois blocos econômicos consoante o país que libertou e ocupou as nações. Países do leste europeu como Polônia, Hungria e Romênia passaram a sofrer influência da União Soviética e construíram governos de caráter socialista.
+
+Já países como França, Bélgica e Holanda, se viram ocupadas pelos Estados Unidos e inauguram a época do Estado de Bem-Estar Social.
+
+O confronto entre as duas ideologias marcou o mundo inteiro e foi conhecido como Guerra Fria.    </p>
     </div>
 
-    <!-- Imagem sobre as Grandes Navegações -->
+     <img src="https://images.educamaisbrasil.com.br/content/banco_de_imagens/guia-de-estudo/D/as-primeiras-grandes-navegacoes.jpg" alt="Imagem sobre as Grandes Navegações" width="500" height="200">    
     <div class="section">
       <h2>Segunda Guerra Mundial</h2>
       <p class="content">
